src/objects/Marketing_Plan_and_Industry_Events__c/Marketing_Plan_and_Industry_Events__c.object-meta.xml
<CustomObject>
    <label>Marketing Plan</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Marketing Plan and Industry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>