src/objects/Marketing_Plan_and_Industry_Events__c/fields/Campaign_or_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_or_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social media lead generation campaign</fullName>
            </value>
            <value>
                <fullName>‎Workshop</fullName>
            </value>
            <value>
                <fullName>‎Road-show</fullName>
            </value>
            <value>
                <fullName>‎Private event</fullName>
            </value>
            <value>
                <fullName>‎Event sponsorship</fullName>
            </value>
            <value>
                <fullName>‎Demo equipment</fullName>
            </value>
            <value>
                <fullName>‎EDM (Electronic direct email) campaign</fullName>
            </value>
            <value>
                <fullName>Social media</fullName>
            </value>
            <value>
                <fullName>‎Social media messages</fullName>
            </value>
            <value>
                <fullName>‎Landing page / dedicated website for solution or product</fullName>
            </value>
            <value>
                <fullName>‎Telemarketing activity</fullName>
            </value>
            <value>
                <fullName>‎Corporate campaign</fullName>
            </value>
            <value>
                <fullName>‎Co-marketing campaign with lead generation</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>PR (press release, case studies, project wins, etc.)</fullName>
            </value>
            <value>
                <fullName>Promotional materials (giveaways, roll-up, etc.)</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
                <isActive>false</isActive>
                <label>Digital Media</label>
            </value>
            <value>
                <fullName>Industry Events - Trade Shows</fullName>
                <isActive>false</isActive>
                <label>Industry Events - Trade Shows</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Traditional Marketing Activity</fullName>
                <isActive>false</isActive>
                <label>Traditional Marketing Activity</label>
            </value>
            <value>
                <fullName>Web-based proposals</fullName>
                <isActive>false</isActive>
                <label>Web-based proposals</label>
            </value>
            <value>
                <fullName>‎Co-marketing campaign</fullName>
                <isActive>false</isActive>
                <label>‎Co-marketing campaign</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>