src/objects/Marketing_Plan_and_Industry_Events__c/fields/Expected_Total_Cost_of_the_Activity__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Cost_of_the_Activity__c</fullName>
    <formula>Co_op__c  +  Partner_Fund__c  +  MDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Total Cost of the Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>