src/objects/Marketing_Plan_and_Industry_Events__c/validationRules/Specify_No_Other_Activity_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_No_Other_Activity_Type</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( Campaign_or_Activity_Type__c , &apos;Other (please specify)&apos;) &amp;&amp;  !ISBLANK(Specify_Other__c)</errorConditionFormula>
    <errorDisplayField>Specify_Other__c</errorDisplayField>
    <errorMessage>You are only allowed to enter the value in this field if you select &quot;Other&quot; in Activity Type</errorMessage>
</ValidationRule>